@@ -1,3 +1,8 @@
+2011-12-12
+* add another squashfs+LZMA variant (for Atheros devices) to bat-extratools
+* add unpacking for squashfs+LZMA variant for Atheros devices to squashfs
+unpacking
+
 2011-12-11
 * if unyaffs seems successful, but actually does not unpack any data, it is
 unsuccessful, so treat it as such.
